# kissmp-clutch-roleplay

./: .gitignore  README.md  config.json
addons_working/vulcan_script/: README.md  globals.lua  main.lua  server.lua  timed_events.lua
addons_working/vulcan_script/extensions/vulcan_rp/: vulcan_rp.lua
addons_working/vulcan_script/settings/: locations.json  players.json  server.json
api/: bot.go  commands.go  database.go  go.mod  go.sum  main.go  server.go  utilities.go  webhook.go
api-rs/: config.json
api-rs/src/: main.rs
discord_handle/: Cargo.toml
discord_handle/src/: main.rs  structs.rs
mapview/: mapview.html  mapview.js
server/: config.json
server/Addons/VK/: Globals.lua  Main.lua  Server.lua  TimedEvents.lua  Utilities.lua
server/Addons/VK/Client/: CEnvironment.lua  CFire.lua  CPlayerJoin.lua  CTooltip.lua
server/Addons/VK/ClientLua/: cl_environment.lua  cl_menu.lua  cl_tab_debug.lua  cl_tab_moderation.lua  cl_tab_players.lua  cl_tooltip.lua  cl_vehicle.lua
server/Addons/VK/Server/: Callbacks.lua  Hooks.lua
server/Addons/VK/Settings/: Colours.json  Extensions.json  Server.json
server/Mods/ClutchRoleplay/settings/: Config.lua
server/addons/vulcan_script/: globals.lua  main.lua  server.lua  timed_events.lua  utilities.lua
server/addons/vulcan_script/client_lua/: cl_environment.lua  cl_menu.lua  cl_player_join.lua  cl_tab_debug.lua  cl_tab_moderation.lua  cl_tab_players.lua  (+2 more)
tests/: lua_format.lua  optional_args.lua  order.lua  table.lua  twitter.lua
vpipe/: go.mod  go.sum
vpipe/src/: discord_handler.go  main.go  utilities.go
(+75 files in other folders)
