[package]
name = "api-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webhook = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
regex = "1"
chrono = "0.4"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["full"]
